--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fastify-typescript-starter",
-  "version": "4.1.0",
-  "description": "Fastify TypeScript starter repository",
+  "name": "turbase.app",
+  "version": "1.0.0",
+  "description": "Turbase App market research site",
   "scripts": {
     "watch": "tsc --watch --preserveWatchOutput --pretty",
     "dev": "cross-env NODE_ENV=development nodemon",
@@ -9,17 +9,19 @@
     "build": "rimraf dist && tsc",
     "start": "node dist/index.js"
   },
-  "author": "Matschik <mathieu.schimmerling@protonmail.com>",
+  "author": "Artem <artem.v.shamsutdinov@dataindependence.net>",
   "license": "MIT",
   "dependencies": {
     "cross-env": "^7.0.3",
-    "fastify": "^3.20.2",
-    "fastify-static": "^4.2.3",
+    "koa": "^2.13.1",
+    "koa-router": "^10.1.1",
+    "koa-send": "^5.0.1",
     "greenlock-express": "^4.0.3"
   },
   "devDependencies": {
     "@types/node": "latest",
-    "fastify-tsconfig": "^1.0.1",
+    "@types/koa": "^2.13.4",
+    "@types/koa-router": "^7.4.4",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
