--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
     "watch": "tsc --watch --preserveWatchOutput --pretty",
     "dev": "cross-env NODE_ENV=development nodemon",
     "format": "prettier --write \"src/**/*.ts\"",
-    "build": "rimraf dist && tsc",
+    "rebuild": "rimraf dist && tsc",
+    "build": "tsc",
     "start": "node dist/index.js"
   },
   "author": "Artem <artem.v.shamsutdinov@dataindependence.net>",
   "license": "MIT",
   "dependencies": {
     "cross-env": "^7.0.3",
-    "koa": "^2.13.1",
-    "koa-router": "^10.1.1",
-    "koa-send": "^5.0.1",
-    "greenlock-express": "^4.0.3"
+    "express": "^4.17.1",
+    "greenlock-express": "^4.0.3",
+    "request-ip": "^2.1.3"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.1",
     "@types/node": "latest",
-    "@types/koa": "^2.13.4",
-    "@types/koa-router": "^7.4.4",
+    "@types/express": "^4.17.13",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
