--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "watch": "tsc --watch --preserveWatchOutput --pretty",
     "dev": "cross-env NODE_ENV=development nodemon",
     "format": "prettier --write \"src/**/*.ts\"",
-    "rebuild": "rimraf dist && tsc",
+    "clean": "rimraf dist/*.js*",
     "build": "tsc",
     "start": "node dist/index.js"
   },
@@ -22,6 +22,7 @@
     "@types/body-parser": "^1.19.1",
     "@types/node": "latest",
     "@types/express": "^4.17.13",
+    "glob": "^10.4.1",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
